styles/style.css
*,
*::before,
*::after {
  box-sizing: border-box;
}

body {
  width: 1100px;
  margin: 0 auto;
  font-family: 'Raleway', sans-serif;
  background-color: #fff;
  color: #000;
}

h1,
h2,
h3,
h4,
h5,
h6,
p,
ul,
ol,
li,
blockquote {
  margin: 0;
  padding: 0;
}

a {
  color: inherit;
  text-decoration: none;
}

img {
  display: block;
  width: 100%;
  height: auto;
}

/* --- ШАПКА --- */
.header {
  display: grid;
  grid-template-columns: 1fr min-content 1fr;
  align-items: center;
  padding: 92px 50px;
}

.header__menu-list {
  display: flex;
  gap: 32px;
  list-style: circle;
  padding-left: 20px;
}

.header__menu-item_no-bullet {
  list-style: none;
  padding-left: 0;
}

.header__logo-image {
  width: 148px;
}

.header__address {
  font-style: normal;
  font-size: 18px;
  line-height: 1.4;
  justify-self: end;
}

/* --- ОБЛОЖКА --- */
.cover {
  position: relative;
  background-image: url(../images/cover.jpg);
  background-size: cover;
  background-position: center;
  padding: 165px 50px 50px;
  min-height: 757px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.overlay {
  position: absolute;
  inset: 0;
  background-color: rgba(0, 0, 0, 0.6);
  z-index: 0;
}

.cover__title {
  display: flex;
  flex-direction: column;
  gap: 20px;
  color: #fff;
  font-size: 100px;
  font-weight: 700;
  line-height: 0.8;
  z-index: 1;
}

.aligned-text {
  display: block;
}

.aligned-text_center {
  display: block;
  text-align: center;
}

.aligned-text_right {
  display: block;
  text-align: right;
}

.cover__description {
  display: flex;
  align-items: center;
  justify-content: flex-end;
  gap: 78px;
  z-index: 1;
  color: #fff;
}

.cover__description-text {
  font-size: 22px;
  text-transform: uppercase;
  word-spacing: 18px;
}

.bet-button {
  background-color: transparent;
  border: 1px solid #fff;
  color: #fff;
  padding: 12px 31px;
  font-family: inherit;
  font-size: 22px;
  cursor: pointer;
  text-transform: uppercase;
}

/* --- ЛОТЫ --- */
.lots {
  padding: 180px 50px 0;
}

.lots__heading {
  font-size: 40px;
  text-transform: uppercase;
  margin-bottom: 27px;
}

.lots__card-list {
  display: flex;
  justify-content: space-between;
  gap: 25px;
  list-style: none;
}

.lots__card-list-item {
  flex-basis: 334px;
  min-height: 450px;
}

.card-link {
  display: block;
  height: 100%;
  text-decoration: none;
}

.card {
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  height: 100%;
  padding: 50px 40px;
  background-size: cover;
  background-position: center;
  color: #fff;
}

/* ТЕ САМЫЕ СТРОЧКИ, КОТОРЫЕ Я ИСПРАВИЛ */
.card_type_film {
  background-image: url(../images/card-lot-01.jpg);
}

.card_type_book {
  background-image: url(../images/card-lot-02.jpg);
}

.card_type_picture {
  background-image: url(../images/card-lot-03.jpg);
}

.card__title {
  font-size: 22px;
  text-decoration: underline;
  text-transform: uppercase;
  z-index: 1;
}

.card__text {
  font-size: 20px;
  line-height: 1.2;
  z-index: 1;
}

.lots__look-more-link {
  display: block;
  margin-top: 30px;
  font-size: 20px;
  text-decoration: underline;
}

/* --- ОБ АУКЦИОНЕ --- */
.about {
  display: grid;
  grid-template-columns: 334px 1fr;
  padding: 180px 50px;
  gap: 30px;
}

.about__logo {
  background-color: #000;
  width: 240px;
  height: 240px;
  border-radius: 50%;
  display: flex;
  justify-content: center;
  align-items: center;
  margin: 0 auto;
}

.about__logo-image {
  width: 148px;
}

.about__title {
  font-size: 40px;
  text-transform: uppercase;
  margin: 100px 0 40px;
}

.about__text p:first-child {
  margin-bottom: 25px;
}

.about__text p {
  font-size: 20px;
  line-height: 1.2;
}

/* --- ФУТЕР --- */
.footer {
  display: grid;
  grid-template-columns: 1fr min-content 1fr;
  align-items: center;
  padding: 180px 50px 90px;
}

.footer__menu-list {
  list-style: none;
  text-align: center;
  display: flex;
  flex-direction: column;
  gap: 5px;
}

.footer__social-list {
  display: flex;
  gap: 16px;
  justify-content: flex-end;
  list-style: none;
}

.footer__social-icon {
  width: 48px;
  height: 48px;
}

